--- a/lenet.ipynb
+++ b/lenet.ipynb
@@ -1,27 +1,8 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": [],
-      "gpuType": "T4"
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    },
-    "accelerator": "GPU"
-  },
   "cells": [
     {
       "cell_type": "code",
-      "source": [
-        "from google.colab import drive\n",
-        "drive.mount('/content/drive')"
-      ],
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -29,15 +10,18 @@
         "id": "TldJtMlGgShJ",
         "outputId": "1f4286f4-8961-47aa-e001-29a40b9fd6c4"
       },
-      "execution_count": null,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Mounted at /content/drive\n"
           ]
         }
+      ],
+      "source": [
+        "from google.colab import drive\n",
+        "drive.mount('/content/drive')"
       ]
     },
     {
@@ -55,6 +39,23 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "id_So7Gcizoh",
+        "outputId": "c7617ee7-c66f-4696-b73c-567a2cd1557c"
+      },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "cuda:0\n"
+          ]
+        }
+      ],
       "source": [
         "from mrfi import MRFI, EasyConfig\n",
         "import torch\n",
@@ -65,27 +66,15 @@
         "import torch.optim as optim\n",
         "\n",
         "device = torch.device(\"cuda:0\" if torch.cuda.is_available() else \"cpu\")"
-      ],
-      "metadata": {
-        "id": "id_So7Gcizoh",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "c7617ee7-c66f-4696-b73c-567a2cd1557c"
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "cuda:0\n"
-          ]
-        }
       ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "OyZNP8ySmzjq"
+      },
+      "outputs": [],
       "source": [
         "class LeNet(nn.Module):\n",
         "  def __init__(self, trained=False):\n",
@@ -108,15 +97,15 @@
         "    x = self.fc3(x)\n",
         "    return x\n",
         "lenet = LeNet()"
-      ],
-      "metadata": {
-        "id": "OyZNP8ySmzjq"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "ZhFIGB31inQ4"
+      },
+      "outputs": [],
       "source": [
         "def get_mnist(batch_size=64):\n",
         "  transform = transforms.Compose(\n",
@@ -139,15 +128,15 @@
         "  )\n",
         "\n",
         "  return trainloader, testloader"
-      ],
-      "metadata": {
-        "id": "ZhFIGB31inQ4"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "1i5z7dC6hDIp"
+      },
+      "outputs": [],
       "source": [
         "def load_dataset(dataset='mnist', batch_size=64):\n",
         "\n",
@@ -156,15 +145,27 @@
         "    return train, test\n",
         "\n",
         "trainloader, testloader = load_dataset()"
-      ],
-      "metadata": {
-        "id": "1i5z7dC6hDIp"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "L7MzX6y3rXFL",
+        "outputId": "accf0514-4e17-47f5-b803-616e2917ed47"
+      },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Epoch 1/1, Loss: 0.2310\n"
+          ]
+        }
+      ],
       "source": [
         "def train(epochs=1):\n",
         "  lenet = LeNet()\n",
@@ -192,27 +193,27 @@
         "    print(f\"Epoch {epoch+1}/{epochs}, Loss: {running_loss/len(trainloader):.4f}\")\n",
         "  torch.save(lenet.state_dict(), '/content/drive/MyDrive/LeNet/train/lenet_mnist.pth')\n",
         "train()"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "L7MzX6y3rXFL",
-        "outputId": "accf0514-4e17-47f5-b803-616e2917ed47"
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Epoch 1/1, Loss: 0.2310\n"
-          ]
-        }
       ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Jw9la45awc7I",
+        "outputId": "43825263-15df-4615-f282-c0393246a1e2"
+      },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Accuracy of the network on the 10000 test images: 100 %\n"
+          ]
+        }
+      ],
       "source": [
         "def test():\n",
         "  lenet = LeNet().to(device)\n",
@@ -235,24 +236,25 @@
         "        100 * correct / total))\n",
         "\n",
         "test()"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "Jw9la45awc7I",
-        "outputId": "43825263-15df-4615-f282-c0393246a1e2"
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Accuracy of the network on the 10000 test images: 100 %\n"
-          ]
-        }
       ]
     }
-  ]
+  ],
+  "metadata": {
+    "accelerator": "GPU",
+    "colab": {
+      "gpuType": "T4",
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "venv",
+      "language": "python",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python",
+      "version": "3.12.3"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
