add statistical model for conv1 and fc3 layer

--- a/lenet.ipynb
+++ b/lenet.ipynb
@@ -4,7 +4,9 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "gpuType": "T4"
+      "gpuType": "T4",
+      "authorship_tag": "ABX9TyOH8a81TmMEriHUe7eEAQo4",
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -17,6 +19,16 @@
   },
   "cells": [
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/NayraSousa/mrfi-teste/blob/dev/lenet.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
       "cell_type": "code",
       "source": [
         "from google.colab import drive\n",
@@ -27,7 +39,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "TldJtMlGgShJ",
-        "outputId": "57746a2e-8024-4764-b0a6-0aa92a6dbc04"
+        "outputId": "4ca5b274-0cb1-4250-d643-e3b2a5f729fe"
       },
       "execution_count": 1,
       "outputs": [
@@ -48,7 +60,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "bfb13fff-7d71-4a6d-a1b6-ad3b8ecaa581"
+        "outputId": "2de4a301-deb6-4a43-b10b-fa122e8925e5"
       },
       "outputs": [
         {
@@ -61,11 +73,11 @@
             "Requirement already satisfied: PyYAML in /usr/local/lib/python3.11/dist-packages (from mrfi) (6.0.2)\n",
             "Requirement already satisfied: scipy in /usr/local/lib/python3.11/dist-packages (from mrfi) (1.14.1)\n",
             "Requirement already satisfied: torch>=1.9 in /usr/local/lib/python3.11/dist-packages (from mrfi) (2.6.0+cu124)\n",
-            "Requirement already satisfied: filelock in /usr/local/lib/python3.11/dist-packages (from torch>=1.9->mrfi) (3.17.0)\n",
+            "Requirement already satisfied: filelock in /usr/local/lib/python3.11/dist-packages (from torch>=1.9->mrfi) (3.18.0)\n",
             "Requirement already satisfied: typing-extensions>=4.10.0 in /usr/local/lib/python3.11/dist-packages (from torch>=1.9->mrfi) (4.12.2)\n",
             "Requirement already satisfied: networkx in /usr/local/lib/python3.11/dist-packages (from torch>=1.9->mrfi) (3.4.2)\n",
             "Requirement already satisfied: jinja2 in /usr/local/lib/python3.11/dist-packages (from torch>=1.9->mrfi) (3.1.6)\n",
-            "Requirement already satisfied: fsspec in /usr/local/lib/python3.11/dist-packages (from torch>=1.9->mrfi) (2024.10.0)\n",
+            "Requirement already satisfied: fsspec in /usr/local/lib/python3.11/dist-packages (from torch>=1.9->mrfi) (2025.3.0)\n",
             "Requirement already satisfied: nvidia-cuda-nvrtc-cu12==12.4.127 in /usr/local/lib/python3.11/dist-packages (from torch>=1.9->mrfi) (12.4.127)\n",
             "Requirement already satisfied: nvidia-cuda-runtime-cu12==12.4.127 in /usr/local/lib/python3.11/dist-packages (from torch>=1.9->mrfi) (12.4.127)\n",
             "Requirement already satisfied: nvidia-cuda-cupti-cu12==12.4.127 in /usr/local/lib/python3.11/dist-packages (from torch>=1.9->mrfi) (12.4.127)\n",
@@ -85,11 +97,11 @@
             "Requirement already satisfied: pillow!=8.3.*,>=5.3.0 in /usr/local/lib/python3.11/dist-packages (from torchvision>=0.11->mrfi) (11.1.0)\n",
             "Requirement already satisfied: MarkupSafe>=2.0 in /usr/local/lib/python3.11/dist-packages (from jinja2->torch>=1.9->mrfi) (3.0.2)\n",
             "Requirement already satisfied: torch in /usr/local/lib/python3.11/dist-packages (2.6.0+cu124)\n",
-            "Requirement already satisfied: filelock in /usr/local/lib/python3.11/dist-packages (from torch) (3.17.0)\n",
+            "Requirement already satisfied: filelock in /usr/local/lib/python3.11/dist-packages (from torch) (3.18.0)\n",
             "Requirement already satisfied: typing-extensions>=4.10.0 in /usr/local/lib/python3.11/dist-packages (from torch) (4.12.2)\n",
             "Requirement already satisfied: networkx in /usr/local/lib/python3.11/dist-packages (from torch) (3.4.2)\n",
             "Requirement already satisfied: jinja2 in /usr/local/lib/python3.11/dist-packages (from torch) (3.1.6)\n",
-            "Requirement already satisfied: fsspec in /usr/local/lib/python3.11/dist-packages (from torch) (2024.10.0)\n",
+            "Requirement already satisfied: fsspec in /usr/local/lib/python3.11/dist-packages (from torch) (2025.3.0)\n",
             "Requirement already satisfied: nvidia-cuda-nvrtc-cu12==12.4.127 in /usr/local/lib/python3.11/dist-packages (from torch) (12.4.127)\n",
             "Requirement already satisfied: nvidia-cuda-runtime-cu12==12.4.127 in /usr/local/lib/python3.11/dist-packages (from torch) (12.4.127)\n",
             "Requirement already satisfied: nvidia-cuda-cupti-cu12==12.4.127 in /usr/local/lib/python3.11/dist-packages (from torch) (12.4.127)\n",
@@ -111,11 +123,11 @@
             "Requirement already satisfied: numpy in /usr/local/lib/python3.11/dist-packages (from torchvision) (2.0.2)\n",
             "Requirement already satisfied: torch==2.6.0 in /usr/local/lib/python3.11/dist-packages (from torchvision) (2.6.0+cu124)\n",
             "Requirement already satisfied: pillow!=8.3.*,>=5.3.0 in /usr/local/lib/python3.11/dist-packages (from torchvision) (11.1.0)\n",
-            "Requirement already satisfied: filelock in /usr/local/lib/python3.11/dist-packages (from torch==2.6.0->torchvision) (3.17.0)\n",
+            "Requirement already satisfied: filelock in /usr/local/lib/python3.11/dist-packages (from torch==2.6.0->torchvision) (3.18.0)\n",
             "Requirement already satisfied: typing-extensions>=4.10.0 in /usr/local/lib/python3.11/dist-packages (from torch==2.6.0->torchvision) (4.12.2)\n",
             "Requirement already satisfied: networkx in /usr/local/lib/python3.11/dist-packages (from torch==2.6.0->torchvision) (3.4.2)\n",
             "Requirement already satisfied: jinja2 in /usr/local/lib/python3.11/dist-packages (from torch==2.6.0->torchvision) (3.1.6)\n",
-            "Requirement already satisfied: fsspec in /usr/local/lib/python3.11/dist-packages (from torch==2.6.0->torchvision) (2024.10.0)\n",
+            "Requirement already satisfied: fsspec in /usr/local/lib/python3.11/dist-packages (from torch==2.6.0->torchvision) (2025.3.0)\n",
             "Requirement already satisfied: nvidia-cuda-nvrtc-cu12==12.4.127 in /usr/local/lib/python3.11/dist-packages (from torch==2.6.0->torchvision) (12.4.127)\n",
             "Requirement already satisfied: nvidia-cuda-runtime-cu12==12.4.127 in /usr/local/lib/python3.11/dist-packages (from torch==2.6.0->torchvision) (12.4.127)\n",
             "Requirement already satisfied: nvidia-cuda-cupti-cu12==12.4.127 in /usr/local/lib/python3.11/dist-packages (from torch==2.6.0->torchvision) (12.4.127)\n",
@@ -159,7 +171,7 @@
       "metadata": {
         "id": "id_So7Gcizoh"
       },
-      "execution_count": 72,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -191,7 +203,7 @@
       "metadata": {
         "id": "OyZNP8ySmzjq"
       },
-      "execution_count": 73,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -217,12 +229,12 @@
         "      testset, batch_size=batch_size, shuffle=False\n",
         "  )\n",
         "\n",
-        "  return trainloader, testloader"
+        "  return trainloader, testloader, testset"
       ],
       "metadata": {
         "id": "ZhFIGB31inQ4"
       },
-      "execution_count": 74,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -231,15 +243,15 @@
         "def load_dataset(dataset='mnist', batch_size=64):\n",
         "\n",
         "  if dataset.lower()=='mnist':\n",
-        "    train, test = get_mnist()\n",
-        "    return train, test\n",
+        "    train, test, testset = get_mnist()\n",
+        "    return train, test, testset\n",
         "\n",
-        "trainloader, testloader = load_dataset()"
+        "trainloader, testloader,testset = load_dataset()"
       ],
       "metadata": {
         "id": "1i5z7dC6hDIp"
       },
-      "execution_count": 75,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -276,17 +288,17 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "L7MzX6y3rXFL",
-        "outputId": "0e193a4b-72f4-4bae-a6e4-52686c0f4088"
+        "outputId": "0087bdcd-7a8c-4c01-f20f-9bd4ebcde288"
       },
-      "execution_count": 76,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Epoch 1/3, Loss: 0.2422\n",
-            "Epoch 2/3, Loss: 0.0674\n",
-            "Epoch 3/3, Loss: 0.0481\n"
+            "Epoch 1/3, Loss: 0.2322\n",
+            "Epoch 2/3, Loss: 0.0720\n",
+            "Epoch 3/3, Loss: 0.0536\n"
           ]
         }
       ]
@@ -321,16 +333,143 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Jw9la45awc7I",
-        "outputId": "b8067b76-7483-4b95-cb44-baa5d0582f63"
+        "outputId": "d991ed53-879d-4497-f7b2-34e064a4f95d"
       },
-      "execution_count": 77,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Accuracy of the network on the 10000 test images: 100 %\n"
+            "Accuracy of the network on the 10000 test images: 98 %\n"
           ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "for name, param in lenet.named_parameters():\n",
+        "    print(f\"Camada: {name}\")\n",
+        "    print(f\"Parâmetros: {param.count_nonzero()}\")\n",
+        "    print(\"-\" * 50)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "9MZhLXzDwdqd",
+        "outputId": "cbe73458-e3b2-4696-a886-e02ca7a084a0"
+      },
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Camada: conv1.weight\n",
+            "Parâmetros: 150\n",
+            "--------------------------------------------------\n",
+            "Camada: conv1.bias\n",
+            "Parâmetros: 6\n",
+            "--------------------------------------------------\n",
+            "Camada: conv2.weight\n",
+            "Parâmetros: 2400\n",
+            "--------------------------------------------------\n",
+            "Camada: conv2.bias\n",
+            "Parâmetros: 16\n",
+            "--------------------------------------------------\n",
+            "Camada: fc1.weight\n",
+            "Parâmetros: 30720\n",
+            "--------------------------------------------------\n",
+            "Camada: fc1.bias\n",
+            "Parâmetros: 120\n",
+            "--------------------------------------------------\n",
+            "Camada: fc2.weight\n",
+            "Parâmetros: 10080\n",
+            "--------------------------------------------------\n",
+            "Camada: fc2.bias\n",
+            "Parâmetros: 84\n",
+            "--------------------------------------------------\n",
+            "Camada: fc3.weight\n",
+            "Parâmetros: 840\n",
+            "--------------------------------------------------\n",
+            "Camada: fc3.bias\n",
+            "Parâmetros: 10\n",
+            "--------------------------------------------------\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import math\n",
+        "\n",
+        "def calculo(e, N, t):\n",
+        "\n",
+        "  denominador = 1 + (e ** 2) * ((N-1) / ((t**2) * 0.25))\n",
+        "  N_inj = N / denominador\n",
+        "  return N_inj\n",
+        "\n",
+        "n_conv1 = calculo(0.01, 150, 2.60)\n",
+        "n_fc = calculo(0.01, 840, 2.60)"
+      ],
+      "metadata": {
+        "id": "plTOqaK4vqCX"
+      },
+      "execution_count": 10,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "n_conv1"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "1LOD_bS75B5X",
+        "outputId": "06c2c23e-5eb9-4791-d84d-aef96cf8e172"
+      },
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "148.68907267288404"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 11
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "n_fc"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ieEnsVqd5DWO",
+        "outputId": "c9a0a916-398c-4034-c564-d79d1831c9cd"
+      },
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "800.2705902249281"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 12
         }
       ]
     },
@@ -339,21 +478,35 @@
       "source": [
         "config_str = \"\"\"\n",
         "faultinject:\n",
-        "  - type: activation\n",
+        "  - type: weights\n",
+        "    name: [weight]\n",
         "    quantization:\n",
         "      method: SymmericQuantization\n",
+        "      bit_width: 8\n",
         "      dynamic_range: auto\n",
-        "      bit_width: 8\n",
-        "    enabled: True\n",
         "    selector:\n",
-        "      method: RandomPositionByRate\n",
-        "      poisson: True\n",
-        "      rate: 1e-3\n",
+        "      method: RandomPositionByNumber\n",
+        "      n: 800\n",
+        "      per_instance: True\n",
         "    error_mode:\n",
-        "      method: IntSignBitFlip\n",
+        "      method: IntRandomBitFlip\n",
         "      bit_width: 8\n",
+        "    module_name: fc3\n",
+        "  - type: weights\n",
+        "    name: [weight]\n",
+        "    quantization:\n",
+        "      method: SymmericQuantization\n",
+        "      bit_width: 8\n",
+        "      dynamic_range: auto\n",
+        "    selector:\n",
+        "      method: RandomPositionByNumber\n",
+        "      n: 150\n",
+        "      per_instance: True\n",
+        "    error_mode:\n",
+        "      method: IntRandomBitFlip\n",
+        "      bit_width: 8\n",
+        "    module_name: conv1\n",
         "\n",
-        "    module_name: [conv1, fc3]\n",
         "\"\"\"\n",
         "\n",
         "econfig = EasyConfig.load_string(config_str)"
@@ -361,7 +514,7 @@
       "metadata": {
         "id": "r4Futmhg3IrI"
       },
-      "execution_count": 78,
+      "execution_count": 13,
       "outputs": []
     },
     {
@@ -375,9 +528,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "jpZubNebL-ez",
-        "outputId": "4ea2d3e8-4338-4e89-8e4a-c05de80446b2"
+        "outputId": "b814a9ee-e298-4a69-9261-e52e842f6a8f"
       },
-      "execution_count": 79,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -393,14 +546,14 @@
             ]
           },
           "metadata": {},
-          "execution_count": 79
+          "execution_count": 14
         }
       ]
     },
     {
       "cell_type": "code",
       "source": [
-        "cfg = fi_model.get_activation_configs()\n",
+        "cfg = fi_model.get_weights_configs(\"selector\")\n",
         "print(cfg)"
       ],
       "metadata": {
@@ -408,15 +561,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "3qg72pd3QMkS",
-        "outputId": "16f28d42-8aa6-47e4-fb86-25c251a2a9e6"
+        "outputId": "3bd50c4d-5458-4694-f427-974243c349cb"
       },
-      "execution_count": 80,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "[<'FI_ATTR' node 'model.sub_modules.conv1.activation.0'>, <'FI_ATTR' node 'model.sub_modules.fc3.activation.0'>]\n"
+            "[<'FI_STAGE' node 'model.sub_modules.conv1.weights.0.selector'>, <'FI_STAGE' node 'model.sub_modules.fc3.weights.0.selector'>]\n"
           ]
         }
       ]
@@ -450,17 +603,17 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "6D1Ib1dvQWrR",
-        "outputId": "c9ed5c3a-0041-44a9-cb14-d69f359b9f2b"
+        "outputId": "6a157ed8-c768-4aba-ca98-fb6449245e25"
       },
-      "execution_count": 81,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "10000 images, acc_golden 9853, acc_fi 9853\n",
+            "10000 images, acc_golden 9863, acc_fi 6243\n",
             "{}\n",
-            "10000 images, acc_golden 9853, acc_fi 9845\n",
+            "10000 images, acc_golden 9863, acc_fi 6257\n",
             "{}\n"
           ]
         }
